parallax overlap fix

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -1,3 +1,10 @@
 //Sass Partial
 
 body {overflow-y:auto;}
+
+.hidden {
+display:none;
+    div {
+display: none;
+    }
+}
