--- a/_sass/layout/_typography.scss
+++ b/_sass/layout/_typography.scss
@@ -21,7 +21,6 @@ h1 {
   line-height:.9;
     letter-spacing: 1px;
     overflow:hidden;
-    word-wrap: break-word;
 }
 
 h2 {
@@ -163,7 +162,7 @@ h1 {
 }
     
         h2 {
-   font-size: 166px;
+   font-size: 160px;
 line-height: 140px;
 }
     
