--- a/_sass/modules/_parallax.scss
+++ b/_sass/modules/_parallax.scss
@@ -62,6 +62,6 @@ background-repeat: no-repeat;
   top: 100vh;
   background: white;
   width: 100%;
-  min-height: 9000px;
+  min-height: 3000px;
     z-index: 0;
 }
